@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020060405"
+#define public MagickPackageVersionAddendum ".020060410"
 #define public MagickPackageReleaseDate "unreleased"
