@@ -21,6 +21,13 @@
 </tr>
 </table>
 <p>
+2006-04-10  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> tiff: Updated bundled libtiff to version 3.8.2.
+
+</UL>
+<p>
 2006-04-05  Fojtik Jaroslav  &lt;JaFojtik@seznam.cz&gt;
 
 <UL>
