@@ -1,3 +1,7 @@
+2006-04-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* tiff: Updated bundled libtiff to version 3.8.2.
+
 2006-04-05  Fojtik Jaroslav  <JaFojtik@seznam.cz>
 
 	* coders/mat.c: Sets image is_grayscale flag as well as added more
